Version 1.2.1 (#12)
* feat: added a Personal-API banner

* feat: properties files setup

* feat: added the necessary config classes

* feat: added basic entities

* feat: added basic dtos

* feat: added basic mappers using MapStruct

* feat: renamed DTO classes

* feat: added db versioning using Flyway

* feat: created the initial Flyway migration

* feat: renamed name to username

* feat: added basic repositories

* feat: added the authorization filter using JWT

* feat: added an exception handler

* feat: now using identities to generate ids

* fix: reindent with spaces

* feat: small changes to entities, dtos and their mapper

* feat: added basic sez

* feat: added basic services

* fix: removed useless Lombok annotations

* feat: modified the utility classes

* fix: infinite loop in the mapper

* feat: added the download logic for the Image entity

* feat: added the upload logic for Projects and Skills

* feat: added validation to the DTOs

* feat: added an Image endpoint to delete an uploaded image

* feat: the httptrace actuator endpoint got renamed  to httpexchanges

* feat: changed the download endpoint mapping

* feat: removed cascades on relations for now

* fix: error messages were being sent back as XML

* feat: now managing images with UUIDs instead of complete URIs

* feat: added custom lengths to string columns

* Version 1.0.0 (#3)

* feat: added a basic Dockerfile and GitHub workflow

* fix: updated the permissions of the gradlew

* fix: fixed the login to Docker Hub and added Docker meta

* fix: updated the version of actions/checkout to v3

* fix: changed the `docker-compose` command to `docker compose`

* feat: added the `no-deps` flag to the `ocker compose up` command

* fix: added the `allowed-origins` property to the `application-prod.properties`

* feat: now using a composite action for building and pushing to Docker Hub

* fix: changed the CORS allowed origins
